@@ -4,6 +4,10 @@ History
 Version 0.8.5 - Unreleased
 --------------------------
 
+- Extended the CVS input of subscribers to allow arbitrary CVS fields 
+  to be stored as part of the subscriptions, and then included in the 
+  composer output using the ${composervariableFIELDNAME1} syntax. [russf]
+
 Version 0.8.4 - 2009-01-02
 --------------------------
 
